SP-24 working version of backend the backend is now partially working you can read the db now
