# server/db_models.py
@@ -1,5 +1,8 @@
 from datetime import datetime
-from server import db, ma
+
+from marshmallow_sqlalchemy import auto_field
+from . import db, ma
+from marshmallow import fields
 
 # -----------------------------------------
 # DataBase configuration 
@@ -15,10 +18,11 @@ class Plant(db.Model):
     image_file = db.Column(db.String(), unique=False, nullable=False, default='static/img/001-botanic.svg')
     min_fill_value = db.Column(db.Integer, unique=False, nullable=False, default=0)
     max_fill_value = db.Column(db.Integer, unique=False, nullable=False, default=5)
-    values = db.relationship('WaterlevelData', backref='name', lazy=True)
+    values = db.relationship('WaterlevelData', backref='name', lazy='joined')
 
     def __repr__(self) -> str:
-        return f"TESTPlant('{self.name}', '{self.creation_date}', '{self.last_update}', '{self.image_file}')"
+        return f"{self.__dict__}"
+        # return f"Plant('{self.name}', '{self.creation_date}', '{self.last_update}', '{self.image_file}')"
 
 class WaterlevelData(db.Model):
     id = db.Column(db.Integer, primary_key=True)
@@ -27,9 +31,17 @@ class WaterlevelData(db.Model):
     report_time = db.Column(db.DateTime, nullable=False, default=datetime.utcnow)
 
     def __repr__(self) -> str:
-        return f"Plant('{self.value}', '{self.report_time}')"
+        return f"Value('{self.plant_id}', '{self.value}', '{self.report_time}')"
+
+class WaterlevelSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = WaterlevelData
+        load_instance = True
 
 class PlantSchema(ma.SQLAlchemyAutoSchema):
-      class Meta:
-            model = Plant
-            load_instance = True
+    class Meta:
+        model = Plant
+        load_instance = True
+
+    values = fields.Nested(WaterlevelSchema, many=True)
+    # WaterlevelData.last_value = auto_field()
