# server/swagger.yml
@@ -15,7 +15,7 @@ basePath: "/api"
 paths:
   /plants:
     get:
-      operationId: plants.read_all
+      operationId: server.plants.read_all
       tags:
         - Plants
       summary: Read the entire list of plants
@@ -42,96 +42,105 @@ paths:
                   type: string
                 id:
                   type: integer
-                creation-date:
+                creation_date:
                   type: string
-                last-update:
+                last_update:
                   type: string
-    post:
-      operationId: plants.create
-      tags:
-        - plants
-      summary: Create a plant and add it to the plants list
-      description: Create a new plant in the plants list
-      parameters:
-        - name: plant
-          in: body
-          description: plant to create
-          required: True
-          schema:
-            type: object
-            properties:
-              name:
-                type: string
-                description: name of the new plant
-      responses:
-        201:
-          description: Successfully created plant in list
+                image_file:
+                  type: string
+                min_fill_value:
+                  type: integer
+                max_fill_value:
+                  type: integer
+                values:
+                  type: integer
+                
+#     post:
+#       operationId: plants.create
+#       tags:
+#         - plants
+#       summary: Create a plant and add it to the plants list
+#       description: Create a new plant in the plants list
+#       parameters:
+#         - name: plant
+#           in: body
+#           description: plant to create
+#           required: True
+#           schema:
+#             type: object
+#             properties:
+#               name:
+#                 type: string
+#                 description: name of the new plant
+#       responses:
+#         201:
+#           description: Successfully created plant in list
 
-  /plants/{id}:
-    get:
-      operationId: plants.read_one
-      tags:
-        - plants
-      summary: Read one plant from the plants list
-      description: Read one plant from the plants list
-      parameters:
-        - name: id
-          in: path
-          description: ID of the plant to get from the list
-          type: integer
-          required: True
-      responses:
-        200:
-          description: Successfully read plant from plants list operation
-          schema:
-            properties:
-              name:
-                type: string
-              id:
-                type: integer
-              creation-date:
-                type: string
-              last-update:
-                type: string
-# TODO: yml plants.update 
-    put:
-      operationId: plants.update
-      tags:
-        - plants
-      summary: Update a plant in the plants list
-      description: Update a plant in the plants list
-      parameters:
-        - name: id
-          in: path
-        - name: lname
-          in: path
-          description: Last name of the plant to update in the list
-          type: string
-          required: True
-        - name: plant
-          in: body
-          schema:
-            type: object
-            properties:
-              fname:
-                type: string
-              lname:
-                type: string
-      responses:
-        200:
-          description: Successfully updated plant in plants list
+#   /plants/{id}:
+#     get:
+#       operationId: plants.read_one
+#       tags:
+#         - plants
+#       summary: Read one plant from the plants list
+#       description: Read one plant from the plants list
+#       parameters:
+#         - name: id
+#           in: path
+#           description: ID of the plant to get from the list
+#           type: integer
+#           required: True
+#       responses:
+#         200:
+#           description: Successfully read plant from plants list operation
+#           schema:
+#             properties:
+#               name:
+#                 type: string
+#               id:
+#                 type: integer
+#               creation-date:
+#                 type: string
+#               last-update:
+#                 type: string
+# # TODO: yml plants.update 
+#     put:
+#       operationId: plants.update
+#       tags:
+#         - plants
+#       summary: Update a plant in the plants list
+#       description: Update a plant in the plants list
+#       parameters:
+#         - name: id
+#           in: path
+#         - name: lname
+#           in: path
+#           description: Last name of the plant to update in the list
+#           type: string
+#           required: True
+#         - name: plant
+#           in: body
+#           schema:
+#             type: object
+#             properties:
+#               fname:
+#                 type: string
+#               lname:
+#                 type: string
+#       responses:
+#         200:
+#           description: Successfully updated plant in plants list
 
-    delete:
-      operationId: plants.delete
-      tags:
-        - plants
-      summary: Delete a plant from the plants list
-      description: Delete a plant
-      parameters:
-        - name: id
-          in: path
-          type: id
-          required: True
-      responses:
-        200:
-          description: Successfully deleted a plant from plants list
+#     delete:
+#       operationId: plants.delete
+#       tags:
+#         - plants
+#       summary: Delete a plant from the plants list
+#       description: Delete a plant
+#       parameters:
+#         - name: id
+#           in: path
+#           type: id
+#           required: True
+#       responses:
+#         200:
+#           description: Successfully deleted a plant from plants list
